--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -1130,8 +1130,18 @@ Explain, in your own words, how clouds adjust to an increase in atmospheric CO$_
 %---------------------------------------------------------------------
 \chapter{Historical warming}
 
+The recent global warming found in the instrumental record plays a central role in the debate over anthropogenic climate change. It is the best observed example of climate change we have, but unfortunately it is caused by a large number of factors that complicates interpretation.
 
 \section{Historical forcings}
+Human activity, the sun and volcanoes have had important impacts on the Earth's radiation balance in the past few centuries. In chapter \ref{chapter:forcing} we had a more detailed look at CO$_2$ forcing and the associated adjustments, but there are many other ways that human activity affects climate and CO$_2$ is probably just half of the sum off all positive impacts by human activities. Figure \ref{fig:ipcc_forcing} displays the many different components and estimates of their uncertainties. We could probably spend a lecture on each of them, just like we did it for CO$_2$, but in the interest of here I explain them only roughly and estimate the timescales involved:
+
+\begin{figure}[b!]
+\begin{center}
+\includegraphics[width=12 cm]{../external_figures/AR5_radiative_forcing.png}
+\end{center}
+\caption{ Estimates of radiative forcing from the latest IPCC AR5 report. } 
+\label{fig:ipcc_forcing}
+\end{figure}
 
 \begin{figure}
 \begin{center}
@@ -1141,31 +1151,74 @@ Explain, in your own words, how clouds adjust to an increase in atmospheric CO$_
 \label{fig:historical_forcing}
 \end{figure}
 
+\begin{itemize}
+\itemsep0em
+%\setlength\itemsep{0 cm}
+\item CO$_2$ is emitted from fossil fuel burning and is partly stored on a short timescale in the atmosphere, partly in vegetation and the upper ocean. It is the most important positive forcing. CO$_2$ is chemically inert, and is only slowly removed into the deep ocean and eventually sediments on timescales of centuries to multiple millennia. 
+\item Other well-mixed greenhouse gases also contribute substantial positive forcing. These tend to have somewhat shorter life-times than CO$_2$, e.g. CH$_4$ stays in the atmosphere for about 10 years. 
+\item Ozone change due to human activity include ozone depletion in the stratosphere and ozone increases in the troposphere as a result of pollution. The latter is more important. The lifetime of the related pollutants are roughly days to months in the troposphere and decades for those affecting ozone in the stratosphere.
+\item Stratospheric water vapor can increase over natural levels due to methane oxidation (2O$_2$ + CH$_4 + \nu \rightarrow $ CO$_2$ + 2H$_2$O). The lifetime of stratospheric water is several years.
+\item Land-use change from e.g. forests to agriculture has made the surface of the Earth slightly brighter, and therefore exerts a small negative forcing.
+\item Contrails from high-altitude air traffic create additional cirrus clouds which have a small warming effect because they reduce the infrared radiation to space. The lifetime of these clouds are of the order of days.
+\item Aerosol particles due to human activities exert a negative forcing on the Earth, both directly by reflecting sunlight back to space and through cloud adjustments. Some aerosol particles can also preferentially absorb sunlight thereby having a warming effect, in particular over bright surfaces. The clouds adjust to aerosol particles for instance because cloud droplets require an aerosol particle that can act as condensation nuclei. There are many processes involved and therefore estimates are uncertain. The typical lifetime of aerosol particles is a week.
+\end{itemize}
+In Figure \ref{fig:historical_forcing} I display the evolution in time of the best estimates of some of the more important components.
+
+
+
+
+\vspace{0.5 cm}
+\noindent
+The natural forcing arises mostly from solar variability and volcanic eruptions. The sunlight input can vary if the either the Earth's orbit changes or the solar activity affects the solar irradiance. Over the period of about 150 years the orbit does not change much, this is more relevant at timescales of 10,000 years and longer; the so-called Milankovitch cycles thought to control the ice-ages. The irradiance varies also over long timescales, but it also has a distinct cycle around 11 years, clearly visible in Figure \ref{fig:historical_forcing}. This cycle plays for instance a role in the flattening of the forcing in the first decade of the 21st Century.
+The strong negative spikes in volcanic forcing happens when volcanoes are explosive enough to inject material into the stratosphere. If the material does not make it up to the stratosphere it is generally precipitated out in a matter of weeks, but once in the stratosphere it can stay aloft for a year or longer and therefore begin to have an appreciable impact on the temperature. Except perhaps for Pinatubo that erupted in 1991, the forcing of individual volcanic eruptions are not very well known. 
+
+The plot of the forcing since 1850 can be deceiving in at least two ways. First, anthropogenic forcing wasn't exactly zero in 1850. The greenhouse gas forcing was already estimated to be around +0.3 Wm$^{-2}$ relative to 1750, but it is thought that the early industry emitted enough aerosol to compensate the greenhouse gas forcing in the global mean. The second point is more subtle and relates to how we think of volcanoes. These are a natural, and for all we know, randomly occurring cooling. So a system that is not forced by human activity will see an average forcing of the longterm mean and equilibrate with it, and so the best way to think of volcanic forcing is in terms of deviations from this mean. This also means that periods without volcanoes will be warmer than usual, implying that actually the volcanic forcing is positive. It is left as a project to estimate the effect of how we handle volcanic forcing.
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=12 cm]{../plots/Temperature_two_layer_model_historical.pdf}
 \end{center}
-\caption{ Temperature . } 
+\caption{ Temperature evolution in the two-layer model with the historical forcing estimates displayed in Figure \ref{fig:historical_forcing}. In these runs ECS is set to 1.78 K, for reasons that shall become apparent. The observed temperature is shifted such as to have the same mean as the model over the period 1850-1879. } 
 \label{fig:historical_two-layer}
 \end{figure}
 
+We can take the forcing time series and apply them to the two-layer model, equations \ref{eq:twolayer-deep}-\ref{eq:twolayer-ml}, we developed in Chapter \ref{chapter:evolution}. The result is shown in Figure \ref{fig:historical_two-layer}, where I have run the model for both the combined forcing and for the individual components shown in Figure \ref{fig:historical_forcing}. We see that the two-layer model does a decent job in matching the observed warming, whereby one should remember that the two-layer model does not exhibit natural variability such El Ni\~no, which is visible in the global mean temperature in for instance in 1997/98 and in 2015/16. 
+
+
 \section{Interpreting historical warming}
+It has now become popular to try to infer $ECS$ from the historical warming. 
+I showed in chapter \ref{chapter:evolution} that the two-layer model can be reduced to the zero-layer model with reasonable approximation if the forcing changes gradually on decadal time-scales. I repeat the zero-layer model here:
+$$T(t) = \frac{F(t)}{\gamma-\lambda}$$
+and the planetary imbalance is:
+$$N(t) = \gamma T(t),$$
+where we remember that $\lambda$ is the feedback parameter which is negative for stable systems, and $\gamma$ is the deep ocean heat uptake coefficient which is on the order of 1 Wm$^{-2}$K$^{-1}$.
+Now we are interested in estimating Earth's equilibrium climate sensitivity, $ECS=-F_{2x}/\lambda$, based on the observed warming. If we assume the zero-layer model applies we may simply compare two different times, $t_1$ and $t_2$, since $T$ and $F$ are proportional and define differences such that e.g. $\Delta T = T(t_2)-T(t_1)$ to get:
+$$\Delta T = \frac{\Delta F}{\gamma-\lambda}$$
+and 
+$$\Delta N = \gamma \Delta T.$$
+Next, we can eliminate $\gamma$ by combining the two equations, and then insert the definition of $ECS$ in order to obtain:
+$$\Delta T = \frac{\Delta F}{\frac{\Delta N}{\Delta T}+\frac{F_{2x}}{ECS}}$$
+and re-arrange in order to isolate $ECS$:
+\begin{equation}
+ECS = \frac{F_{2x}\cdot \Delta T}{\Delta F - \Delta N}.
+\label{eq:zero_ecs}
+\end{equation}
 
-
+\noindent
+Now we see that the problem of determining ECS boils down to estimating the change in temperature, forcing and planetary imbalance between two periods. The periods can in principle be chosen freely, it is not required that one period is at stationarity. It is, however, important that the assumptions made in the zero-layer model are reasonable fulfilled, for instance that the forcing is changing gradually on decadal time-scales. Looking at figure \ref{fig:historical_forcing} we see that volcanic forcing is the perfect counter-example of a gradually changing forcing. This leaves us with periods in the late 19th Century, one in the mid-20th Century and the early 21st Century. In table \ref{table:input} I provide the difference between the former and the latter. 
 
 \begin{table}
-  \caption{Input for the observations-based analysis. Changes are between the period 2005-2015 minus 1859-1882. Uncertainties are standard deviations of the assumed gaussian distributions. The lower part of the table specifies the individual contributions to the total forcing change, whereas the total aerosol forcing ($F_\textrm{aero}$) is relative to 1750. }
+  \caption{Input for the observations-based analysis. Changes are between the period 2005-2015 minus 1859-1882. Uncertainties are standard deviations of the assumed gaussian distributions. The lower part of the table specifies the individual contributions to the total forcing change.  }
   \vspace{0.5 cm}
   \centering
   \begin{tabular}{lrlr}
     \hline
     Quantity & Value &  & Source\\
     \hline
-    Temperature change ($\Delta T$)     & 0.77&$\pm$ 0.08 K                  & HadCRUT4\citep{Morice:2012dw} \\
-    Total forcing change ($\Delta F$)      & 2.16&$\pm$ 0.59 Wm$^{-2}$   & IPCC\citep{IPCC:2013is} \\    
-    Planetary imbalance, 2005-2015 ($Q$)            & 0.71&$\pm$ 0.06 Wm$^{-2}$   & Johnson et al.\citep{Johnson:2016do} \\
-    Planetary imbalance, 1859-1882                      & 0.15&$\pm$ 0.075 Wm$^{-2}$ & Lewis and Curry\citep{Lewis:2014jt} \\    
+    Temperature change, $\Delta T$     & 0.77&$\pm$ 0.08 K                  & HadCRUT4\citep{Morice:2012dw} \\
+    Total forcing change, $\Delta F$      & 2.16&$\pm$ 0.59 Wm$^{-2}$   & IPCC\citep{IPCC:2013is} \\    
+    Planetary imbalance, 2005-2015, $N(t_2)$            & 0.71&$\pm$ 0.06 Wm$^{-2}$   & Johnson et al.\citep{Johnson:2016do} \\
+    Planetary imbalance, 1859-1882, $N(t_1)$                     & 0.15&$\pm$ 0.075 Wm$^{-2}$ & Lewis and Curry\citep{Lewis:2014jt} \\    
     \hline
     Greenhouse gas forcing change   & 2.53&$\pm$ 0.18 Wm$^{-2}$   & IPCC\citep{IPCC:2013is} \\    
     Aerosol forcing change                  &-0.69&$\pm$ 0.55 Wm$^{-2}$   & IPCC\citep{IPCC:2013is} \\    
@@ -1174,15 +1227,50 @@ Explain, in your own words, how clouds adjust to an increase in atmospheric CO$_
     Land use change                          &-0.10&$\pm$ 0.06 Wm$^{-2}$   & IPCC\citep{IPCC:2013is} \\        
     Ozone change                              & 0.29&$\pm$ 0.12 Wm$^{-2}$   & IPCC\citep{IPCC:2013is} \\        
     Contrails                                        & 0.05& Wm$^{-2}$                     & IPCC\citep{IPCC:2013is} \\        
-    Natural forcing change                  & -0.005 &  Wm$^{-2}$                & IPCC\citep{IPCC:2013is} \\         
+    Natural forcing change                  & -0.005 &  Wm$^{-2}$                & IPCC\citep{IPCC:2013is} \\ 
     \hline
     Forcing for doubled CO$_2$ ($F_{2\times}$)           & 3.71&$\pm$ 0.26 Wm$^{-2}$   & \\        
-    Total aerosol forcing, 2005-2015 ($F_\textrm{aero}$)  &-0.90&$\pm$ 0.55 Wm$^{-2}$   & \\      
     \hline
   \end{tabular}
-
   \label{table:input}
 \end{table}
+
+Inserting values from Table \ref{table:input} in Equation \ref{eq:zero_ecs} we obtain $ECS \approx$ 1.78 K. This number is fairly low compared to suggestions that $ECS$ likely is between 1.5 and 4.5 K, a result that has puzzled scientists in the past five years. There are a number of suggestions out there for why these estimates are low-biased ranging from the temperature record not having global coverage, that feedback is non-constant between decadal and centennial timescales, natural variability, to forcings act differently and cannot simply be added.
+
+Here we shall instead look at what the uncertainty in each term in equation  \ref{eq:zero_ecs} means for uncertainty in $ECS$ inferred by this method. It is not so straight-forward (I believe it is impossible) to use regular error-analysis that you might have learned in earlier courses because of the division by a difference. Further, not all errors are independent. For instance the change in $\Delta F$ contains a contribution from CO$_2$ that has errors that are dependent on errors in $F_{2x}$. Therefore we resort to Monte-Carlo sampling.
+
+In Monte-Carlo sampling methods you assume probability-distribution functions for all terms in the expression you are interested in estimating (e.g. equation \ref{eq:zero_ecs}), then draw random samples from those distributions. The random samples are then used to evaluate random estimates of the expression. Here we shall use the gaussian distribution, referred to as the normal distribution. In Python you can the ask for example for 10 samples from the gaussian distribution with mean equal 0.0 and standard deviation of 1.0 as follows:
+\begin{verbatim}
+   > import numpy as np
+   > np.random.normal(0.0, 1.0 , 10)
+      1.52  -0.31  -0.28  -0.18  -0.52  0.16  0.71  1.24  0.81  -0.58 
+\end{verbatim}
+If you would sample enough, perhaps a few million times, and plot the probability distribution you would get something very close to a gaussian distribution.
+
+Now we can do the same for each quantity in equation \ref{eq:zero_ecs}. We will simply assume that they are gaussian with the standard deviations listed in Table \ref{table:input}. Already by looking at the uncertainties it is clear that the numerator is fairly well constrained with errors of about 10 percent, but the denominator $(\Delta F - \Delta N)$ can cause more uncertainty in $ECS$. This is particularly the case if $\Delta F$ becomes small so that we divide by a small number and $ECS$ can become large. 
+In figure \ref{fig:ECS_inferred_forcing} I plot the non-aerosol and the aerosol forcing, and their sum. We see how aerosol forcing is assumed much more uncertain than the uncertainty in all other forcing components together, and that aerosol forcing is dominating the uncertainty in total forcing. We can understand this as for independent random errors the standard deviations add in quadrature, such the standard deviation of the total forcing is the square root of the sum of squared standard deviations:
+$$ \sigma_{total} = \sqrt{\sigma_{aerosol}^2 + \sigma_{non-aerosol}^2}$$
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=10 cm]{../plots/ECS_inferred_forcing.pdf}
+\end{center}
+\caption{ Monte-Carlo sampled forcing change used to estimate $ECS$ from historical warming. I plot probability distributions for aerosol, non-aerosol and total forcing change. } 
+\label{fig:ECS_inferred_forcing}
+\end{figure}
+
+With the resulting distribution of $\Delta F$, and likewise randomly sampled $\Delta T$ and $\Delta N$, we can now calculate a corresponding distribution of $ECS$ following equation \ref{eq:zero_ecs} as displayed in Figure \ref{fig:ECS_inferred}. We see that the method results in a highly skewed distribution giving most weight to lower-end $ECS$ and a long tail towards higher values (actually, a few samples have $ECS > \infty$). Given the strong weight on low-end $ECS$ this type of estimates is somewhat at odds with other evidence suggesting $ECS$ is most likely around 3 K, or sometimes higher. One possible reason for this could be that the feedback parameter is different when the system is out of balance; an effect we shall investigate in the next chapter.
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=10 cm]{../plots/ECS_inferred.pdf}
+\end{center}
+\caption{ Monte-Carlo sampled probability distribution of $ECS$ as calculated using equation \ref{eq:zero_ecs} using values from table \ref{table:input}. The median value and the 5-95 percent interval of the distribution is printed. Here I have additionally sampled $F_{2x}$ in such a way that it correlates with greenhouse gas forcing, though this has  little impact on the results and can be ignored. } 
+\label{fig:ECS_inferred}
+\end{figure}
+
+
+
 
 %---------------------------------------------------------------------
 \chapter{Time- and state-dependent feedback}
@@ -1195,32 +1283,115 @@ Explain, in your own words, how clouds adjust to an increase in atmospheric CO$_
 
 
 %---------------------------------------------------------------------
+\clearpage
+\appendix
 \chapter{Projects}
 
+Below I describe the projects. There is quite a diversity to choose from, and I expect you need to spend 5-10 hours on it, including making the experiments work and looking for background information. 
+Each group or person gets to show two slides. One with the project title and the participant names on it; the slide can be used to introduce the problem/idea. The second slide will show the main result or finding. In each project I may ask several questions, but you get to choose what you find most interesting and present it, and/or think of other questions on your own, as inspired by the project. Please make sure graphics are clear, axes and lines are correctly labeled and colors, lines and symbols are well-chosen for clarity. Do not clutter the second slide with many small figures.
+
+\vspace{0.5 cm}
+\noindent
+You need to provide your slides to me before the presentation lecture, preferably via email. The safest is to convert it to pdf format. The presentations will take no more than 5 minutes each. 
+
+\vspace{0.5 cm}
+\noindent
+If you are stuck in any way I am available via email and will likely respond within a day; please make sure to describe your issue explicitly and, if applicable, also the computer and programs you are using.
 
 \section{Attribution of historical warming}
+Suppose that more than a hundred years of research is wrong and the well-mixed greenhouse gases have no effect on the Earth's radiation balance. Could the historical warming then still be forced? 
+If all we know is the global mean temperature then you can begin to explore this idea with the two-layer model by rescaling the different components in the historical forcing. Create at least two sets of scaling factors, $S_i$, such that:
+$$F = 0\cdot F_{CO_2} + S_{aero}\cdot F_{aero}+ S_{solar}\cdot F_{solar} + ...$$
+where the CO$_2$ and other well-mixed greenhouse gas forcings are scaled to zero, but compensated by other forcings to obtain a reasonable match with observed warming. Remember that you can also use negative $S_i$ to make for instance aerosol or stratospheric ozone forcing positive. %You may for instance present the two, or more, rescaled runs together with the standard setup with $S_i=1$ and judge their ability to explain global warming, but the floor is open.
+For this project you can use the provided two-layer model setup to run the historical case.
 
-
-\section{MODTRAN exercise}
-
-
-\section{Modeling natural variability}
+\vspace{0.5 cm}
+\noindent
+{\em More formal attribution efforts will use other information than just the global mean temperature. Different forcings have characteristic patterns, fingerprints, that can be estimated using complex climate models and used to show that most of the $S_i$ are close to one.  }
 
 
 \section{The underwater volcano}
+As in the previous project, suppose we are all mistaken and that the greenhouse gas forcing is zero, and instead global warming is caused by geothermal heat seeping out of the seabed, e.g. through volcanoes. You must now introduce a deep ocean forcing $F_d$ into the two-layer model equation for the deep ocean:
+$$C_d\frac{dT_d}{dt} = \gamma(T-T_d) + F_d$$
+In the Python code you can do this by inserting an additional argument to the twolayermodel function interface. You now have to invent a forcing time series and adjust its strength such that the model roughly reproduces the observed warming. You may choose to keep some of the non-greenhouse gas forcing components, if you like, though at least the ordinary volcanos and solar forcing should be retained.
 
+One way you might illustrate that this is a bad idea is to calculate the sea level rise that would occur. If you assume the ocean water approximately expands at a rate of roughly $1.5\cdot 10^{-4}$ K$^{-1}$, and remembering that the two-layer model is set up to represent a 75 m mixed-layer plus a 1000 m deep ocean, estimate the sea-level rise to demonstrate that we would have had were global warming due to underwater volcanos.
+
+
+\section{Create a hiatus}
+The surface warmed more slowly than expected from 1998--2012, an event which many people call `the hiatus'. One possible explanation for the hiatus is that we forgot to account for certain forcings in models: e.g. the solar-cycle minimum or stratospheric aerosols due to small volcanic eruptions during this period. Reproduce a hiatus in the 2-layer model. Ramp up the forcing incrementally to $F_{2x}$ over 70 years and then hold the forcing constant out to year 140. Produce a second run, but this time try to keep the temperature evolution after year 70 constant by decreasing the forcing at a constant rate from year 70 onward.  This code might be useful:
+\begin{verbatim}
+    nyears             = 140
+    forcing_years      = np.arange(0,nyears)
+    input_forcing      = f2x*np.linspace(0.,2.,nyears)
+    input_forcing[70:] = input_forcing[70]
+    ...
+\end{verbatim}
+What is the average forcing change in Wm$^{-2}$ needed in the first 15 years relative to the constant forcing case? Note here that the output of the model is monthly means. What average forcing change would you need to produce a constant temperature after year 70 in the zero-layer model? Can you explain the difference between the two models? %Estimates in the literature suggest that the neglected forcings should be around --0.2 to --0.3 Wm$^{-2}$; do you think these forcings could explain the hiatus?
+
+
+\section{Estimating the forcing from CO$_2$ all the way from zero}
+We usually assume that the forcing from CO$_2$ is logarithmic in concentration such that $F_{4x} \approx 2\cdot F_{2x}$ and $F_{8x} \approx 3\cdot F_{2x}$, $F_{0.5x} \approx -F_{2x}$ etc. which is a finding we owe to Svante Arrhenius' epic study from 1896. But how far does the logarithmic assumption work? To investigate this you will use the MODTRAN model to investigate this. You can start from the standard 400 ppm and go up through consecutive doublings e.g. to 6400 ppm and likewise down by halving the concentration. Also figure out what is the total forcing between 0 and 400 ppm. Repeat the exercise with the observer at both 70 km height and also at the tropopause at 18 km height to see how the stratosphere will adjust. You may plot the result and figure out over which range the logarithmic assumption works reasonably, or focus on how stratospheric adjust depends on the CO$_2$ level.
+
+
+\section{Modeling natural variability}
+The two-layer model does not exhibit natural variability on its own. But we can model the effect of 'weather' by introducing random year-to-year variation in the radiation balance. This is easy to do in the two-layer model; here I create input for a 10000-year long run with random noise sampled from a  gaussian distribution as forcing:
+\begin{verbatim}
+     nyears = 10000
+     forcing_years = np.arange(0,nyears)
+     input_forcing = np.random.normal(0,1,nyears)
+\end{verbatim}
+If you plot the time-series of mixed-layer and deep ocean temperatures you will notice there is considerable low-frequency variability despite the fact that the year-to-year forcing is random. The heat reservoirs act as a memory that bears resemblance to random walk, brownian motion or red noise (Hasselmann 1976). There is, however, a restoring force through the feedback parameter that keeps the system in place and tends to dampen variability. Explore the controls of natural variability in this system, e.g. by changing $ECS$. It may come in handy to compare power-spectra between the mixed-layer and deep ocean, and between runs with different settings. Here is an example of how this can be done:
+\begin{verbatim}
+     frequency = np.linspace(0,12/2,nyears/2)
+     P_ml = np.fft.fft(exp1['T_ml'])
+     P_ml = P_ml[0:int(nyears/2)]
+     axes.plot(frequency,abs(P_ml)**2)
+\end{verbatim}
+What happens if you set $ECS$ to a very large number such that $\lambda \rightarrow 0$?
 
 \section{Treating volcanoes in historical simulations}
+Often when we run models with historical forcing we first run our models into equilibrium with pre-industrial forcings that do not contain volcanoes, and then treat volcanoes as a negative forcing as done in figures \ref{fig:historical_forcing} and \ref{fig:historical_two-layer}. Gregory et al. (2013) pointed out that this leads to an artificial cooling, in particular of the deep ocean, over the historical period.
+
+Volcanoes, for all we know, occur randomly every now and then and are a part of the natural boundary conditions for the climate system. Therefore it is more reasonable to run the climate model to equilibrium with the volcanic forcing and then start the historical simulation from a slightly colder climate. This can be done in several ways for the two-layer model. 1) One could repeat the record of volcanic forcing, available for 1750-2011 in the IPCC report, over and over again and eventually the temperature will fluctuate around a new mean. 2) Or one could calculate the equilibrium state from the two-layer model equations. 3) Or finally one can subtract the mean volcanic forcing from the volcanic forcing such that it is on average zero. Either way the result will be a simulation that does not drift due to volcanos. 
+
+Use the provided two-layer model set up to run the historical case to figure out what the impact is of including volcanos in the pre-industrial state. You could look at both the mixed-layer and deep ocean temperatures to figure out what is going on. If you were to take the standard setup that drifts and increase the $ECS$ in that model, then how high would it need to be to achieve the same amount of warming as the non-drifting version? 
 
 
-\section{Estimate Earth's climate sensitivity from historical warming}
+\section{Estimate $ECS$ from historical warming}
+Write a program that reproduces Figure \ref{fig:ECS_inferred} by evaluating equation \ref{eq:zero_ecs} using Monte-Carlo sampling. As input you can use the estimates provided in Table \ref{table:input} and assume that the probability distributions of all entities are gaussian. Explore how sensitive the results are to the input, e.g. the assumed mean and standard deviation for aerosol. What would it take to make the median estimate larger than, say 3.0 K?
+To do this exercise in Python, you need to load relevant modules, and sample each entity a large number of times. In this example I make a million samples (note that some computers may have trouble with large sample sizes) of the temperature change:
+\begin{verbatim}
+     import matplotlib.pyplot as plt
+     import numpy as np
+     import scipy.stats as stats
+
+     nsamp = int(1e6)
+
+     delta_T = np.random.normal(0.77, 0.08, nsamp)
+     ...
+\end{verbatim}
+Then plot the results probability distribution function. You can also use the scipy.stats package to calculate the 5 and 95 percentiles of your samples, e.g for the 5th percentile:
+\begin{verbatim}
+     stats.scoreatpercentile(samples,5)
+\end{verbatim}
+The method of estimating $ECS$  with equation \ref{eq:zero_ecs} was first invented by Gregory et al. (2002), and later updated and refined by Otto et al. (2013) and Lewis and Curry (2014).
 
 
 \section{Fit two-layer model to GCM}
+We often assume that the feedback parameter $\lambda$ is a constant, but if one forces some climate models with more the $F_{2x}$ then they start to exhibit non-linearities. In the MPI-ESM1.2 coupled climate model we have a quite rapid increase of $ECS$ from less than 3 K for one doubling and up to 10 K for the fourth doubling ($F_{8x} \rightarrow F_{16x}$). Bloch-Johnson et al. (2015) suggested that this model behavior could be described as a simple Taylor expansion of the feedback parameter such that:
+$$\lambda(T) = \lambda_o + b*T + ...$$
+where $\lambda_o$ and $b$ are coefficients. 
+Now take the standard two-layer model and load in data from a set of 1000-year simulations with MPI-ESM1.2 with abruptly applied 2, 4, 8 and 16 times pre-industrial CO$_2$, plotting $N$ versus $T$ for each experiment as in Figure \ref{fig:gregory_hansen}. You can assume forcing is logarithmic in CO$_2$ concentration, but you may need to adapt to the specific model's $F_{2x}$ as described in chapter \ref{chapter:forcing}. Next, try to find $\lambda_o$ and $b$ such that the two-layer model reasonably matches the complex model. What happens if you force the two-model with these parameter settings harder?
 
-
-
-
+You can load the netcdf files from the MPI-ESM1.2 experiments into Python and calculate the surface temperature and top-of-atmosphere imbalance using for instance this command:
+\begin{verbatim}
+     from scipy.io import netcdf
+     mpiesm_2x = netcdf.netcdf_file('mpiesm-1.2.00_abrupt2xCO2_anomaly.nc')
+     N_2x = mpiesm_2x.variables['trad0'][:,0,0]+bot.variables['srad0'][:,0,0]
+     T_2x = mpiesm_2x.variables['tsurf'][:,0,0]
+\end{verbatim}
+The files have already been globally and annually average, and I have subtracted the control simulation values.
 
 %\begin{figure}
 %\begin{center}
@@ -1236,35 +1407,11 @@ Explain, in your own words, how clouds adjust to an increase in atmospheric CO$_
 \bibliography{bibliography}
 %--------------------------------------------------------%
 
-\vspace{5 mm}
-\noindent
-{\bf Acknowledgements} 
+%\vspace{5 mm}
+%\noindent
+%{\bf Acknowledgements} 
 
 
-
-\newpage
-
-
-
-\begin{table}
-  \caption{ Input for calculation of short-lived climate forcers associated with fossil fuel burning. Uncertainties are standard deviations calculated from the referenced 5-95 percentiles. }
-  \vspace{0.5 cm}
-  \centering
-  \begin{tabular}{lrlr}
-    \hline
-    Quantity & Value &  & Source\\
-    \hline
-    Methane (CH$_4$)              & 0.970 &$\pm$ 0.10 Wm$^{-2}$                  & IPCC\citep{Myhre:2013ui} \\
-    Nitrogen oxides (NO$_x$)     & -0.151 &$\pm$ 0.11 Wm$^{-2}$                  & IPCC\citep{Myhre:2013ui} \\
-    Carbon monoxide (CO)       & 0.234 &$\pm$ 0.03 Wm$^{-2}$                  & IPCC\citep{Myhre:2013ui} \\
-    Fossil fuel fraction of CH$_4$ emissions ($f_{ff}$) & 0.29 &$\pm$ 0.02   & IPCC\citep{Ciais:2013ui} \\
-    \hline
-    Weighted sum (F$_\textrm{slcf}$)      & 0.36   &$\pm$ 0.12 Wm$^{-2}$                  & \\
-    \hline
-  \end{tabular}
-
-  \label{table:slcfs}
-\end{table}
 
 
 
