Updated two-layer model scripts to use MPI-ESM1.2 like parameters.

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -412,9 +412,9 @@ Do this by modifying Equation \ref{eq:black_body_energy_balance} replacing $\sig
 Derive Equation \ref{eq:ntwo} for a two-layer atmosphere in the same way as done for the case for the single-layer atmosphere.
 \end{exercise}
 
-\begin{exercise}
-Make sure you have access to a computer with Python, and follow the instructions on the handed out sheet.
-\end{exercise}
+%\begin{exercise}
+%Make sure you have access to a computer with Python, and follow the instructions on the handed out sheet.
+%\end{exercise}
 
 }
 
@@ -1434,7 +1434,7 @@ The Earth's currently remaining ice sheets, Greenland and Antarctica, would also
 \begin{center}
 \includegraphics[width=12 cm]{../plots/Planck_state_dependence.pdf}
 \end{center}
-\caption{ Temperature feedback parameters from ECHAM6 (red) from the study of Meraner et al. (2015) and two theoretical expressions. } 
+\caption{ Temperature feedback parameters from ECHAM6 (red) from the study of Meraner et al. (2013) and two theoretical expressions. } 
 \label{fig:planck_state_dependence}
 \end{figure}
 \subsubsection{Temperature feedback}
